# HarukaShogi

./: .gitignore  README.md  compare.py  cpp_test.py  duel.py  duel_test.py  environment.yml  gensfen  install_searchengine.sh  output.prof  parallel_gensfen.sh  parse_kifs.py  perft.py  play.py  players_test.py  pre_nnue_gensfen  scrape_kif.py  show_perft.py  show_sfen.py  starting_positions.py  test.py  test_data.txt
controller/: controller.py  player.py
game/: game_state.py  misc.py  move_rules.py
old_search/alpha_beta/: searcher.py
old_search/evaluation/: evaluator.py  piece_value.py
search/alpha_beta/: searcher.py
search/evaluation/: evaluator.py  move_ordering.py  piece_value.py
searchengine/: CMakeLists.txt
searchengine/include/: incbin.h
searchengine/src/: bindings.cpp  bitboard.cpp  bitboard.h  book_data.cpp  book_data.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  history.h  main.cpp  misc.cpp  misc.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  nnue.cpp  nnue.h  opening_book.cpp  opening_book.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  test.cpp  test.h  thread.cpp  thread.h  transposition.h  ttable.cpp  ttable.h  types.h  usi.cpp  usi.h
searchengine/src/book_generation/: csv_parser  csv_parser.cpp  games_parser.cpp  shogi_games.csv
searchengine/src/data_gen/: gensfen.cpp  startpos_gen.cpp
searchengine/src/nnue/: accumulator.h  bindings.cpp  binpack.cpp  binpack.h  features.h  gensfen.cpp  load.cpp  load.h  nnue.cpp  nnue.h
searchengine/src/nnue/layers/: crelu.h  ft.h  linear.h
trainer/: analyze_data.ipynb  dataset.py  model.py  train.py
ui/: gui.py  misc.py
